packages/next-swc/crates/core/tests/errors/server-actions/2/output.js
/* __next_internal_action_entry_do_not_use__  */ 'use strict';
export function bar() {}